NextGEN Gallery
by Alex Rabe

V0.41 - 
- Update : Thickbox v3 integrated
- Added : CSS file for K2 theme
- Added : German translation (THX to Lazy)
- Added : Better check for safe-mode
- Added : CSS Class for single-pic : class="ngg-singlepic"
- Changed : Image quality by default 85% (THX to ArizonaGroovejet)
- Bugfix : Fixed Permalink in album (THX to Helene D.)
- Bugfix : Scan folder in empty gallery
- Bugfix : Swfobjects only added with Thickbox effect
- Bugfix : Umlauts are now handled correctly

V0.40 - 29.04.2007
- NEW : TinyMCE Button integration
- Removed : CSS Style : remove width/height in album

V0.39 - 28.04.2007
- Added : Set ORDER BY for gallery
- Bugfix : check now for Exclude != 1
- Bugfix : DB Query in function wrong
- Bugfix : DB exlude = DEFAULT '0'
- Bugfix : Scan folder in empty gallery

V0.38 - 28.04.2007
- Bugfix : One time more remove get_settings :-)
- Bugfix : $_GET in Manage gallery
- Bugfix : exclude option

V0.37 - 28.04.2007
- Bugfix : $_GET in Manage gallery
- Bugfix : update DB installation routine

V0.36 - 26.04.2007
- Bugfix : Stupid PHP beginner failure in album management

V0.35 - 26.04.2007
- Rework : Folder name can be flexible
- New option : Fullsize pic for Singlepic mode
- New option : Select show order
- Added : Check for WP2.1
- Added : Check for permission for default folder
- Bugfix : Remove get_settings
- Bugfix : Correction for Safe-Mode ON
- Bugfix : Set Default '0' for table album.sortorder
- Bugfix : Update sort order

V0.34 - 24.04.2007
- Added : Add fix ration setting
- Added : Add language file file
- Bugfix : Change link in Album to get_bloginfo('wpurl')
- Bugfix : Album CSS file not loaded

V0.33 - 23.04.2007
- NEW : Overview Page
- NEW : Core function
- NEW : Slideshow

